[package]
name = "ftbgui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }
zip = { version = "4.6", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
